--- a/Lab/style.css
+++ b/Lab/style.css
@@ -4,7 +4,7 @@ body {
 
 .float {
     float: left;
-    margin-right: 10px;
+    margin-right: 20px;
     padding-right: 10px;
 }
 
@@ -22,4 +22,9 @@ label, span {
 }
 #suggestions {
     clear: both;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
 }
